Criação do arquivo index e primeiras edições!

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <h1> Stella Maris 2022 </h1>
 
-<p><strong> <b> </b></strong> Medalhas e Conquistas nos Esportes: </p>
+<p> <strong> Medalhas e Conquistas nos Esportes: </strong> </p>
 
-<p> Campeão Municipal de Futsal Masculino 2022 </p> 
-<p> Campeão Regional de Futsal Masculino 2022 </p> 
-<p> Campeão Municipal de Futsal Feminino 2022 </p> 
-<p> Vice-campeão Regional de Futsal Feminino 2022 </p> 
-<p> Campeão Municipal de Futebol Masculino 2022 </p> 
-<p> Campeão Regional de Futebol Masculino 2022 </p> 
-<p> Campeão Macrorregional de Futebol Masculino 2022 </p> 
-<p> 4° Melhor Equipe de Futebol Masculino 2022 do Estado do Paraná </p> 
-<p> Campeão Municipal de Futebol Feminino 2022 </p> 
-<p> Campeão Regional de Futebol Feminino 2022 </p> 
-<p> Vice-campeão Macrorregional de Futebol Feminino 2022 </p> 
-<p> 15° Melhor Equipe de Futebol Feminino 2022 do Estado do Paraná </p> 
+<p>Campeão de Futsal Masculino A 2022 - Fase Municipal </p> 
+<p>Campeão de Futsal Masculino A 2022 - Fase Regional </p> 
+<p>Campeão de Futsal Feminino A 2022 -  Fase Municipal </p> 
+<p>Vice-campeão de Futsal Feminino A 2022 - Fase Regional </p> 
+<p>Campeão de Futebol Masculino A 2022 - Fase Municipal </p> 
+<p>Campeão de Futebol Masculino A 2022 - Fase Regional </p> 
+<p>Campeão de Futebol Masculino A 2022 - Fase Macrorregional </p> 
+<p> <strong> 4ª Melhor Equipe de Futebol Masculino A do Estado do Paraná 2022 </strong> </p> 
+<p>Campeão de Futebol Masculino B 2022 - Fase Municipal </p>
+<p>3ª Melhor Equipe de Futebol Masculino B 2022 - Fase Regional </p>
+<p>Campeão de Futebol Feminino A 2022 - Fase Municipal </p> 
+<p>Campeão de Futebol Feminino A 2022 - Fase Regional </p> 
+<p>2ª Melhor Equipe de Futebol Feminino A 2022 - Fase Macrorregional </p> 
+<p> <strong> 15° Melhor Equipe de Futebol Feminino A do Estado do Paraná 2022 </strong> </p> 
