--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
-<h1> Stella Maris 2022 </h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <title> CESM - JEP'S 2022 </title>  
+    <link rel="stylesheet" href="style.css">
 
-<p> <strong> Medalhas e Conquistas nos Esportes: </strong> </p>
+</head>
+<body> 
+    <h1> Stella Maris 2022 </h1>
 
-<p>Campeão de Futsal Masculino A 2022 - Fase Municipal </p> 
-<p>Campeão de Futsal Masculino A 2022 - Fase Regional </p> 
-<p>Campeão de Futsal Feminino A 2022 -  Fase Municipal </p> 
-<p>Vice-campeão de Futsal Feminino A 2022 - Fase Regional </p> 
-<p>Campeão de Futebol Masculino A 2022 - Fase Municipal </p> 
-<p>Campeão de Futebol Masculino A 2022 - Fase Regional </p> 
-<p>Campeão de Futebol Masculino A 2022 - Fase Macrorregional </p> 
-<p> <strong> 4ª Melhor Equipe de Futebol Masculino A do Estado do Paraná 2022 </strong> </p> 
-<p>Campeão de Futebol Masculino B 2022 - Fase Municipal </p>
-<p>3ª Melhor Equipe de Futebol Masculino B 2022 - Fase Regional </p>
-<p>Campeão de Futebol Feminino A 2022 - Fase Municipal </p> 
-<p>Campeão de Futebol Feminino A 2022 - Fase Regional </p> 
-<p>2ª Melhor Equipe de Futebol Feminino A 2022 - Fase Macrorregional </p> 
-<p> <strong> 15° Melhor Equipe de Futebol Feminino A do Estado do Paraná 2022 </strong> </p> 
+    <h2> <strong> Medalhas e Conquistas nos Esportes em 2022: </strong> </h2>
+    
+    <p>Campeão de Futsal Masculino A 2022 - Fase Municipal </p> 
+    <p>Campeão de Futsal Masculino A 2022 - Fase Regional </p> 
+    <p>Campeão de Futsal Feminino A 2022 -  Fase Municipal </p> 
+    <p>Vice-campeão de Futsal Feminino A 2022 - Fase Regional </p> 
+    <p>Campeão de Futebol Masculino A 2022 - Fase Municipal </p> 
+    <p>Campeão de Futebol Masculino A 2022 - Fase Regional </p> 
+    <p>Campeão de Futebol Masculino A 2022 - Fase Macrorregional </p> 
+    <p> <strong> 4ª Melhor Equipe de Futebol Masculino A do Estado do Paraná 2022 </strong> </p> 
+    <p>Campeão de Futebol Masculino B 2022 - Fase Municipal </p>
+    <p>3ª Melhor Equipe de Futebol Masculino B 2022 - Fase Regional </p>
+    <p>Campeão de Futebol Feminino A 2022 - Fase Municipal </p> 
+    <p>Campeão de Futebol Feminino A 2022 - Fase Regional </p> 
+    <p>2ª Melhor Equipe de Futebol Feminino A 2022 - Fase Macrorregional </p> 
+    <p> <strong> 15° Melhor Equipe de Futebol Feminino A do Estado do Paraná 2022 </strong> </p> 
+</body>
+</html>
+
