--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body> 
     <h1> Stella Maris 2022 </h1>
 
-    <h2> <strong> Medalhas e Conquistas nos Esportes em 2022: </strong> </h2>
+    <h2> <strong> <i> Medalhas e Conquistas nos Esportes em 2022: </i> </strong> </h2>
     
     <p>Campeão de Futsal Masculino A 2022 - Fase Municipal </p> 
     <p>Campeão de Futsal Masculino A 2022 - Fase Regional </p> 
