Adicionando Padding, Margin, img, classe e id

--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
     <p>Campeão de Futebol Masculino A 2022 - Fase Municipal </p> 
     <p>Campeão de Futebol Masculino A 2022 - Fase Regional </p> 
     <p>Campeão de Futebol Masculino A 2022 - Fase Macrorregional </p> 
-    <p> <strong> 4ª Melhor Equipe de Futebol Masculino A do Estado do Paraná 2022 </strong> </p> 
+    <p id="destaque"> <strong> 4ª Melhor Equipe de Futebol Masculino A do Estado do Paraná 2022 </strong> </p> 
     <p>Campeão de Futebol Masculino B 2022 - Fase Municipal </p>
     <p>3ª Melhor Equipe de Futebol Masculino B 2022 - Fase Regional </p>
     <p>Campeão de Futebol Feminino A 2022 - Fase Municipal </p> 
     <p>Campeão de Futebol Feminino A 2022 - Fase Regional </p> 
     <p>2ª Melhor Equipe de Futebol Feminino A 2022 - Fase Macrorregional </p> 
-    <p> <strong> 15° Melhor Equipe de Futebol Feminino A do Estado do Paraná 2022 </strong> </p> 
+    <p id="feminino"> <strong> 15° Melhor Equipe de Futebol Feminino A do Estado do Paraná 2022 </strong> </p> 
+
+    <img src="time.jpg" alt="Troféu do Campeonato Macrorregional de 2022" class="gustavo" >
+
 </body>
 </html>
 
