--- a/index.html
+++ b/index.html
@@ -11,16 +11,36 @@
 
     <h2> <strong> <i> Medalhas e Conquistas nos Esportes em 2022: </i> </strong> </h2>
     
+<div> 
+
+    <ul div class="jogadoresM" > 
+        <li> <strong> Masculino A - Jogadores </strong></li>
+        <li> BRUNO GABRIEL DOS SANTOS </li>
+        <li> CAIO CISOTO MARQUES </li>
+        <li> CARLOS HENRIQUE ALEXANDRINO ALVES </li>
+        <li> DEIVID HENRIQUE VICENTE </li>
+        <li> EDSON MOREIRA DA SILVA JUNIOR </li>
+        <li> HENRIQUE EDUARDO ALVARENGA </li>
+        <li> HENRIQUE MAIOLO ROSSATO </li>
+        <li> LUCAS EDUARDO KAMISIMA VICENTE </li>
+        <li> MAYKIEL DE OLIVEIRA ROSA </li>
+        <li> PABLO CESAR LAUTON TROVELO </li>
+        <li> RAFAEL ANTONIO SIMÃO </li>
+        <li> RAFAEL GUILHERME DOS REIS FARINHA </li>
+    </ul>
+</div>
+    
     <p>Campeão de Futsal Masculino A 2022 - Fase Municipal </p> 
     <p>Campeão de Futsal Masculino A 2022 - Fase Regional </p> 
-    <p>Campeão de Futsal Feminino A 2022 -  Fase Municipal </p> 
-    <p>Vice-campeão de Futsal Feminino A 2022 - Fase Regional </p> 
     <p>Campeão de Futebol Masculino A 2022 - Fase Municipal </p> 
     <p>Campeão de Futebol Masculino A 2022 - Fase Regional </p> 
     <p>Campeão de Futebol Masculino A 2022 - Fase Macrorregional </p> 
-    <p id="destaque"> <strong> 4ª Melhor Equipe de Futebol Masculino A do Estado do Paraná 2022 </strong> </p> 
     <p>Campeão de Futebol Masculino B 2022 - Fase Municipal </p>
     <p>3ª Melhor Equipe de Futebol Masculino B 2022 - Fase Regional </p>
+    <p id="destaque"> <strong> 4ª Melhor Equipe de Futebol Masculino A do Estado do Paraná 2022 </strong> </p> 
+
+    <p>Campeão de Futsal Feminino A 2022 -  Fase Municipal </p> 
+    <p>Vice-campeão de Futsal Feminino A 2022 - Fase Regional </p> 
     <p>Campeão de Futebol Feminino A 2022 - Fase Municipal </p> 
     <p>Campeão de Futebol Feminino A 2022 - Fase Regional </p> 
     <p>2ª Melhor Equipe de Futebol Feminino A 2022 - Fase Macrorregional </p> 
